# machtop

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release-deb.yml
src/: app.rs  main.rs  ui.rs
src/metrics/: mod.rs  model.rs  procfs.rs  profile.rs  sysfs.rs
