[package]
name = "machtop"
version = "0.1.0"
edition = "2024"
description = "A compact Linux TUI system monitor with CPU, thermal, GPU, and NPU metrics"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/ClayStan404/machtop"
repository = "https://github.com/ClayStan404/machtop"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
libc = "0.2"
ratatui = "0.29"

[dev-dependencies]
tempfile = "3.14"

[package.metadata.deb]
maintainer = "ClayStan404"
copyright = "2026, ClayStan404"
depends = "$auto"
section = "utils"
priority = "optional"
extended-description = """\
machtop is a compact Linux TUI system monitor focused on CPU, thermal,
GPU, and NPU visibility on both generic Linux machines and RK3588 boards.
"""
assets = [
  ["target/release/machtop", "usr/bin/machtop", "755"],
  ["README.md", "usr/share/doc/machtop/README.md", "644"],
  ["LICENSE", "usr/share/doc/machtop/LICENSE", "644"],
]
